[tool.poetry]
name = "healthcare_rah0703"
version = "0.1.0"
description = "this is a test version"
authors = ["rahul shrivastav"]
license = "MIT"
readme = "README.md"
homepage= "https://github.com/rahulshri0703/healthcare_rah0703"
repository ="https://github.com/rahulshri0703/healthcare_rah0703"
keywords=["bmi"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
